test/corpus/fuzzy_metadata_edge_cases.txt
==============================
Fuzzy Test: Metadata Edge Cases
==============================

2014-01-01 * "Transaction with metadata everywhere"
    meta-key: "value"
    Expenses:Restaurant         100 USD
    meta-num: 42
    Assets:Cash                -100 USD
    meta-date: 2014-01-01

---

(file
    (transaction
        (date)
        (txn)
        (narration)
        (key_value (key) (value (string)))
        (posting (account) (incomplete_amount (number) (currency)))
        (key_value (key) (value (number)))
        (posting (account) (incomplete_amount (unary_number_expr (minus) (number)) (currency)))
        (key_value (key) (value (date)))
    )
)

==============================
Fuzzy Test: Metadata on Directives
==============================

2013-01-01 open Assets:Test
    account-type: "asset"

2013-01-02 close Assets:Test
    closed: TRUE

2013-01-03 commodity USD
    precious: FALSE

2013-01-04 note Assets:Test "A note"
    noted: TRUE

2013-01-05 pad Assets:Test Equity:Other
    padded: TRUE

2013-01-06 balance Assets:Test 100 USD
    checked: TRUE

---

(file
    (open
        (date)
        (account)
        (key_value (key) (value (string)))
    )
    (close
        (date)
        (account)
        (key_value (key) (value (bool)))
    )
    (commodity
        (date)
        (currency)
        (key_value (key) (value (bool)))
    )
    (note
        (date)
        (account)
        (string)
        (key_value (key) (value (bool)))
    )
    (pad
        (date)
        (account)
        (account)
        (key_value (key) (value (bool)))
    )
    (balance
        (date)
        (account)
        (amount_tolerance (number) (currency))
        (key_value (key) (value (bool)))
    )
)

==============================
Fuzzy Test: Metadata Value Types
==============================

2014-01-01 * "Metadata with all value types"
    str-val: "hello"
    int-val: 42
    float-val: 3.14
    bool-true: TRUE
    bool-false: FALSE
    date-val: 2014-12-31
    curr-val: USD
    acct-val: Assets:Test
    amount-val: 100 USD
    tag-val: #mytag
    Assets:Test 1 USD
    Assets:Test -1 USD

---

(file
    (transaction
        (date)
        (txn)
        (narration)
        (key_value (key) (value (string)))
        (key_value (key) (value (number)))
        (key_value (key) (value (number)))
        (key_value (key) (value (bool)))
        (key_value (key) (value (bool)))
        (key_value (key) (value (date)))
        (key_value (key) (value (currency)))
        (key_value (key) (value (account)))
        (key_value (key) (value (amount (number) (currency))))
        (key_value (key) (value (tag)))
        (posting (account) (incomplete_amount (number) (currency)))
        (posting (account) (incomplete_amount (unary_number_expr (minus) (number)) (currency)))
    )
)

==============================
Fuzzy Test: Deeply Nested Metadata
==============================

2014-01-01 * "Transaction with many metadata entries"
    key1: "value1"
    key2: "value2"
    key3: "value3"
    key4: "value4"
    key5: "value5"
    key6: "value6"
    key7: "value7"
    key8: "value8"
    key9: "value9"
    key10: "value10"
    Assets:Test 10 USD
    Assets:Test -10 USD

---

(file
    (transaction
        (date)
        (txn)
        (narration)
        (key_value (key) (value (string)))
        (key_value (key) (value (string)))
        (key_value (key) (value (string)))
        (key_value (key) (value (string)))
        (key_value (key) (value (string)))
        (key_value (key) (value (string)))
        (key_value (key) (value (string)))
        (key_value (key) (value (string)))
        (key_value (key) (value (string)))
        (key_value (key) (value (string)))
        (posting (account) (incomplete_amount (number) (currency)))
        (posting (account) (incomplete_amount (unary_number_expr (minus) (number)) (currency)))
    )
)
